Rename servce. Add id from external system.

--- a/CartingService/CartingService/Properties/launchSettings.json
+++ b/CartingService/CartingService/Properties/launchSettings.json
@@ -9,7 +9,7 @@
     }
   },
   "profiles": {
-    "CartingService": {
+    "BasketService": {
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
