Add Rabbit message queue broker.

--- a/MessageBroker/BasketService/appsettings.json
+++ b/MessageBroker/BasketService/appsettings.json
@@ -8,5 +8,11 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "LiteDbConnectionString": "Filename=.\\database.db;Password=1234;Connection=Shared"
+  },
+  "EventBusConfiguration": {
+    "EventBusConnection": "localhost",
+    "RetryCount": 3,
+    "BrokerName": "ItemMessageBroker",
+    "QueueName" : "ItemQueue"
   }
 }
