--- a/MessageBroker/CatalogService/WebAPI/appsettings.json
+++ b/MessageBroker/CatalogService/WebAPI/appsettings.json
@@ -8,5 +8,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "EventBusConfiguration": {
+    "EventBusConnection": "localhost",
+    "RetryCount": 3,
+    "BrokerName" : "ItemMessageBroker"
+  },
   "AllowedHosts": "*"
 }
