--- a/MessageBroker/CatalogService/BLL/BLL.csproj
+++ b/MessageBroker/CatalogService/BLL/BLL.csproj
@@ -13,6 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\ServiceMessaging\ServiceMessaging.csproj" />
     <ProjectReference Include="..\DAL\DAL.csproj" />
     <ProjectReference Include="..\Domain\Domain.csproj" />
     <ProjectReference Include="..\Extension\Extension.csproj" />
